Use Maven to call the JPackage